--- a/cases.tex
+++ b/cases.tex
@@ -26,8 +26,9 @@ y = \cases{0 & \text{if $x < 0$} \\ 1 & \text{otherwise}}
 \series_{i=0}^{4} x_i^i
 A_{ 1 , 2 \, 3 , 4 } + B^{7 \over 2}
 % # empty string
+(5\;5)
 
-1 + 1 = 2 % this is simple \\ 2+2 
+1 + 1 = 2 % this is simple \\ 2+2
 \inner{x, y}
 \prescript_1^2 He_30^40
 {1 \bover 2}
@@ -46,7 +47,7 @@ x + \pad{x} + x = 3x
 \begin{pmatrix} a & b \\ c & d \end{pmatrix}
 He^III
 \alpha + \beta = \gamma
-\argmin__{x \in \reals}
+\argmin__{n \in \naturals}
 \hat{x_2}
 _1^2 X_3^4
 \class{red}{X + Y}
